syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "GrpcAppProto";
option objc_class_prefix = "GAP";
// The service definition.
service ServiceName {
  // Remote procedures:
  rpc unaryProcedure (TheRequest) returns (TheResponse) {}
  rpc streamProcedure (TheRequest) returns (stream TheResponse) {}
  rpc fibProcedure (FibRequest) returns (stream FibResponse) {}
}
// The request message containing the user's name and age.
message TheRequest {
  string name = 1;
  int32 age = 2;
}
// The response message containing the hello text
message TheResponse {
  string message = 1;
}

message FibRequest {
  int32 ile = 1;
  bool szescian = 2;
}

message FibResponse {
  int32 liczba = 1;
  int32 liczb2 = 2;
}